[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/Buttons/GlossariyButton.png" type="Texture" id=1]
[ext_resource path="res://Scripts/GlossaryButton.gd" type="Script" id=2]
[ext_resource path="res://Sounds/shoroh.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/perevorot.wav" type="AudioStream" id=4]

[node name="TextureButton" type="TextureButton"]
margin_right = 130.0
margin_bottom = 16.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 40.0
margin_bottom = 7.0
rect_min_size = Vector2( 130, 0 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -32.412
bus = "GlossSound"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -23.596
bus = "GlossSound"

[connection signal="button_down" from="." to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_TextureButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_TextureButton_pressed"]
